--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,18 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "inertiajs/inertia-laravel": "^0.2.15",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/jetstream": "^1.4",
+        "laravel/sanctum": "^2.6",
+        "laravel/tinker": "^2.0",
+        "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
+        "jasonmccreary/laravel-test-assertions": "^1.0",
+        "laravel-shift/blueprint": "^1.19",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3"
