--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@inertiajs/inertia-vue": "^0.2.0",
         "@tailwindcss/ui": "^0.6.0",
         "axios": "^0.19",
+        "browser-sync": "^2.26.12",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "laravel-jetstream": "^0.0.3",
         "laravel-mix": "^5.0.1",
